--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,12 +2,19 @@
 {% set active_page = 'home' %}
 
 {% block content %}
-<h1><i class="lightbulb icon"></i>Today's inspiration</h1>
+<style>
+  @media only screen and (max-width: 720px) {
+    .extra.content.meta a {display:block;}
+    a.ui.tag.label {display: none;}
+  }
+</style>
+<h1><i class="lightbulb icon"></i>{{ _("Today's inspiration") }}</h1>
 <div class="ui grid">
   {% for i in range(4) %}
     {% set id    = [1,2,3] | random %}
     {% set title = ['Fish curry', 'Pasta something', 'Naan delicious'] | random %}
-    {% set duration = [15,20,25,30,45,60] | random %}
+    {% set preptime = [0,5,10,15,20,25,30,35,40,45,50,60] | random %}
+    {% set cooktime = [15,20,25,30,45,60] | random %}
     {% set tag   = ['Italian', 'Indian', 'Moroccan'] | random %}
     <div class="four wide column">
       <div class="ui card">
@@ -18,18 +25,18 @@
           <a class="header" href="{{ url_for('recipe_detail', id=id, title='slug-here') }}" style="margin-top: 1rem;">{{ title }}</a>
         </div>
         <div class="extra content meta">
-          <a href="{{ url_for('recipes', duration=duration ) }}"><i class="stopwatch icon"></i> {{ duration }}min</a>
+          <a href="{{ url_for('recipes', duration=preptime ) }}"><i class="stopwatch icon"></i> {{ preptime }}min</a>
+          <a href="{{ url_for('recipes', duration=cooktime ) }}"><i class="clock outline icon"></i> {{ cooktime }}min</a>
           <a href="{{ url_for('recipes', tag=tag.lower() ) }}" class="ui tag label right floated">{{ tag }}</a>
         </div>
       </div>
     </div>
-
   {% endfor %}
 </div>
 
 <div class="ui divider"></div>
 
-<h1><i class="calendar icon"></i>Meal planning</h1>
+<h1><i class="calendar icon"></i>{{ _("Meal planning") }}</h1>
 <table class="ui selectable very basic table">
     <tr>
       <td class="center aligned one wide">
@@ -53,7 +60,7 @@
     </tr>
     <tr>
       <td class="center aligned">
-        <img class="ui mini avatar image" src="">
+        <img class="ui avatar image" src="">
       </td>
       <td>
         <strong>Wednesday March 25</strong><br>
@@ -76,7 +83,7 @@
     </tr>
     <tr>
       <td class="center aligned">
-        <img class="ui mini avatar image" src="">
+        <img class="ui avatar image" src="">
       </td>
       <td class="notes" data-title="Notities" data-content="Rosti rondjes uit de vriezer, schenkel proberen of deze goed is anders BBQ worstjes, groente uit diepvries">
         <strong>Friday March 27</strong><br>
@@ -88,15 +95,18 @@
       <td></td>
       <td>
         <strong>Saturday March 28</strong>
-        <div class="ui right floated icon input small" style="width:80%;margin-left:1rem;">
-          <input type="text" placeholder="Quick search for a recipe...">
-          <i class="search icon"></i>
+        <div class="ui search" style="display: inline-block;  width:80%;margin-left:1rem;">
+          <div class="ui icon fluid input small">
+            <input type="text" placeholder="{{ _('Quick search for a recipe...') }}">
+            <i class="search icon"></i>
+          </div>
+          <div class="results"></div>
         </div>
       </td>
       <td>
         <a class="ui labeled icon button" href="{{ url_for('recipes', schedule='24-3-2020') }}">
           <i class="binoculars icon"></i>
-          Search
+          {{ _("Search") }}
         </a>
       </td>
     </tr>
@@ -105,15 +115,15 @@
       <td>
         <button class="ui labeled icon button">
           <i class="plus icon"></i>
-          Add day
+          {{ _("Add day") }}
         </button>
         <button class="ui labeled icon button">
           <i class="calendar plus outline icon"></i>
-          Add week
+          {{ _("Add week") }}
         </button>
         <a class="ui labeled icon button" href="{{ url_for('scheduler') }}">
           <i class="calendar alternate outline icon"></i>
-          Scheduler
+          {{ _("Scheduler") }}
         </a>
       </td>
       <td></td>
@@ -123,6 +133,5 @@
 <script>
 $(document).ready(function(){
     $('.notes').popup();
-});
 </script>
 {% endblock %}
