--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.4/semantic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.4/components/search.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.4/components/accordion.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <style>
@@ -26,6 +27,11 @@
     .sidebar {
       flex: 0 0 auto;
       width: 260px;
+    }
+    @media only screen and (max-width: 720px) {
+      .sidebar {
+        display: none;
+      }
     }
   </style>
 </head>
