--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -67,10 +67,10 @@
             <div class="column">
               <a class="ui statistic" href="">
                 <div class="value">
-                  2
+                  7
                 </div>
                 <div class="label">
-                  Users
+                  Categories
                 </div>
               </a>
             </div>
@@ -125,6 +125,13 @@
               <option value="120+">120+ minutes</option>
             </select>
           </div>
+
+          <div class="inline field">
+            <div class="ui toggle checkbox">
+              <input type="checkbox" tabindex="0" class="hidden">
+              <label>Allow user registration</label>
+            </div>
+          </div>
           
           <button class="ui button" type="submit">Save settings</button>
         </form>
@@ -151,6 +158,7 @@
 $(document).ready(function(){
     $('.dropdown').dropdown();
     $('.slider').slider({min:1, max:10, start: 2});
+    $('.ui.checkbox').checkbox();
 });
 </script>
 {% endblock %}
