--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -8,11 +8,11 @@
 <div class="ui grid">
   <div class="six wide column cards">
     <div class="ui fluid card">
-      <a class="image" href="{{ url_for('recipe_detail', id=1, title='fish-curry') }}">
+      <a class="image" href="{{ url_for('recipe', id=1, title='fish-curry') }}">
         <img src="/static/food/example-1.jpg">
       </a>
       <div class="content">
-        <a class="header" href="{{ url_for('recipe_detail', id=1, title='fish-curry') }}">Fish curry</a>
+        <a class="header" href="{{ url_for('recipe', id=1, title='fish-curry') }}">Fish curry</a>
       </div>
 
       <div class="extra content meta">
