Make all text translatable

--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
-{% set title = 'Categories' %}
+{% set title = _('Categories') %}
 {% set active_page = 'settings' %}
 
 {% block content %}
-<h1>Categories</h1>
+<h1>{{ _('Categories') }}</h1>
 
 <table class="ui compact selectable striped table">
     <thead>
         <tr>
-            <th colspan="3">Name</th>
+            <th colspan="3">{{ _('Name') }}</th>
         </tr>
     </thead>
 
