--- a/app/templates/pantry.html
+++ b/app/templates/pantry.html
@@ -2,7 +2,7 @@
 {% set active_page = 'pantry' %}
 
 {% block content %}
-<h1>Pantry</h1>
+<h1>{{ _('Pantry') }}</h1>
 
 <div class="ui styled fluid accordion">
 	<div class="active title">
