--- a/app/templates/tags.html
+++ b/app/templates/tags.html
@@ -3,12 +3,12 @@
 {% set active_page = 'settings' %}
 
 {% block content %}
-<h1>Tags</h1>
+<h1>{{ _('Tags') }}</h1>
 
 <table class="ui compact selectable striped table">
     <thead>
         <tr>
-            <th colspan="3">Name</th>
+            <th colspan="3">{{ _('Name') }}</th>
         </tr>
     </thead>
 
