--- a/app/templates/ingredients.html
+++ b/app/templates/ingredients.html
@@ -1,14 +1,14 @@
 {% extends 'layout.html' %}
-{% set title = 'Ingredients' %}
+{% set title = _('Ingredients') %}
 {% set active_page = 'settings' %}
 
 {% block content %}
-<h1>Ingredients</h1>
+<h1>{{ _('Ingredients') }}</h1>
 
 <table class="ui compact selectable striped table">
     <thead>
         <tr>
-            <th colspan="3">Name</th>
+            <th colspan="3">{{ _('Name') }}</th>
         </tr>
     </thead>
 
