--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -22,6 +22,7 @@
             <input type="password" name="password" placeholder="{{ _('Password') }}" value="*************">
           </div>
           <button class="ui button" type="submit">{{ _('Save profile') }}</button>
+          <a class="ui button" href="{{ url_for('logout') }}">{{ _('Logout') }}</a>
         </form>
     </div>
 
